logs/validate.20260408-045304.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: unexpected token, expected `;`
   --> src/Chap47/LinProbFlatHashTableStEph.rs:288:40
    |
288 | ...                   }) by {
    |                          ^^

error[E0425]: cannot find type `LinProbFlatHashTableStEph` in this scope
   --> src/Chap47/LinProbFlatHashTableStEph.rs:885:30
    |
885 |     impl std::fmt::Debug for LinProbFlatHashTableStEph {
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LinProbFlatHashTableStEph` in this scope
   --> src/Chap47/LinProbFlatHashTableStEph.rs:891:32
    |
891 |     impl std::fmt::Display for LinProbFlatHashTableStEph {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 1494MB, peak z3 RSS: 0MB, min free: 25098MB
Sampled CPU Usage: rust_verify: 16s, z3 children: 0s
